Animations working, have to edit all the hand images again.

--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -80,7 +80,7 @@
                     android:id="@+id/rightFingerImageView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    app:srcCompat="@drawable/test_01"
+                    app:srcCompat="@drawable/animation_fourfinger_01"
                     android:alpha="0.9"
                     android:contentDescription="@string/finger_image" />
 
