Animation 3b_to_2m_to_3b added, multiselect added to workoutHisotryAdapter, functionality yet to be implemented.

--- a/app/src/main/res/layout/activity_workout_history.xml
+++ b/app/src/main/res/layout/activity_workout_history.xml
@@ -54,7 +54,9 @@
                 android:layout_height="match_parent"
                 android:layout_marginBottom="8dp"
                 android:layout_marginEnd="8dp"
-                android:choiceMode="singleChoice"
+                android:animateLayoutChanges="false"
+                android:choiceMode="multipleChoice"
+                android:clickable="false"
                 android:listSelector="?attr/colorControlHighlight"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
