WorkoutDetailsActivity now shows calculated details also.

--- a/app/src/main/res/layout/activity_workout_details.xml
+++ b/app/src/main/res/layout/activity_workout_details.xml
@@ -32,7 +32,8 @@
             <TextView
                 android:id="@+id/calculatedDetailsTextView"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:layout_margin="8dp" />
             <!--
             <com.github.mikephil.charting.charts.BarChart
                 android:id="@+id/workoutDifficultyPerSecondBarChart"
