--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -88,7 +88,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:alpha="0.9"
-                    android:contentDescription="@string/finger_image" />-->
+                    android:contentDescription="@string/finger_image" />
 
                 <ImageView
                     android:id="@+id/templateFingerImageView"
@@ -97,7 +97,7 @@
                     android:alpha="0.9"
                     android:visibility="visible"
                     app:srcCompat="@drawable/finger_template" />
-
+-->
 
             </RelativeLayout>
 
