--- a/app/src/main/res/layout/activity_benchmark.xml
+++ b/app/src/main/res/layout/activity_benchmark.xml
@@ -31,4 +31,25 @@
 
     </ListView>
 
+    <CheckBox
+        android:id="@+id/randomizeGrips"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="12dp"
+
+        android:layout_marginEnd="60dp"
+        android:layout_marginBottom="8dp"
+        android:text="@string/randomize_grips"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/copyBenchmarkWorkout" />
+
+    <Button
+        android:id="@+id/copyBenchmarkWorkout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="8dp"
+        android:text="@string/copy_workout"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintRight_toRightOf="parent" />
+
 </android.support.constraint.ConstraintLayout>
