--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -13,8 +13,8 @@
 
     <item android:id="@+id/action_settings"
         android:icon="@drawable/settings_icon"
-        android:title="@string/action_settings"
-        app:showAsAction="always"/>
+        android:title="@string/settings"
+        app:showAsAction="ifRoom"/>
 
 
 
