--- a/app/src/main/res/layout/activity_benchmark.xml
+++ b/app/src/main/res/layout/activity_benchmark.xml
@@ -13,6 +13,9 @@
         android:layout_height="250dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
+        android:choiceMode="singleChoice"
+        android:clickable="true"
+        android:focusable="true"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
@@ -25,6 +28,9 @@
         android:layout_height="250dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
+        android:choiceMode="singleChoice"
+        android:clickable="true"
+        android:focusable="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/hangboardsListView">
