--- a/app/src/main/res/layout/activity_benchmark.xml
+++ b/app/src/main/res/layout/activity_benchmark.xml
@@ -12,14 +12,12 @@
         android:layout_width="150dp"
         android:layout_height="200dp"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
         android:choiceMode="singleChoice"
         android:clickable="true"
         android:focusable="true"
         android:listSelector="@color/gray"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-   >
+        app:layout_constraintTop_toTopOf="parent">
 
     </ListView>
 
@@ -29,13 +27,12 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
         android:choiceMode="singleChoice"
         android:clickable="true"
         android:focusable="true"
         android:listSelector="@color/gray"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toTopOf="@id/randomizeGrips"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/hangboardsListView">
 
