Added textview to BenchmarkActivity which shows and animates benchmark workout's parameter differences.

--- a/app/src/main/res/layout-land/activity_benchmark.xml
+++ b/app/src/main/res/layout-land/activity_benchmark.xml
@@ -51,14 +51,27 @@
 
             <TextView
                 android:id="@+id/benchmarkInfoTextView"
-                android:layout_width="match_parent"
-                android:layout_height="200dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
                 android:layout_marginBottom="8dp"
-                android:textAlignment="center"
+                android:textAlignment="textStart"
                 android:textSize="12sp"
                 app:layout_constraintBottom_toTopOf="@+id/randomizeGrips"
-                app:layout_constraintTop_toTopOf="parent"
-                tools:layout_editor_absoluteX="8dp" />
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/animationTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="-8dp"
+                android:layout_marginBottom="8dp"
+                android:text="TextView"
+                android:textSize="12sp"
+                app:layout_constraintBottom_toTopOf="@+id/randomizeGrips"
+                app:layout_constraintStart_toEndOf="@+id/benchmarkInfoTextView"
+                app:layout_constraintTop_toTopOf="parent" />
 
             <CheckBox
                 android:id="@+id/randomizeGrips"
