--- a/app/src/main/res/layout/activity_benchmark.xml
+++ b/app/src/main/res/layout/activity_benchmark.xml
@@ -68,11 +68,13 @@
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
         android:text="TextView"
-        android:textAlignment="center"
+        android:textAlignment="textEnd"
         android:textSize="12sp"
         app:layout_constraintBottom_toTopOf="@+id/benchmarksListView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/hangboardsListView"
         app:layout_constraintTop_toTopOf="parent" />
+
+
 
 </android.support.constraint.ConstraintLayout>
