--- a/app/src/main/res/layout/activity_benchmark.xml
+++ b/app/src/main/res/layout/activity_benchmark.xml
@@ -68,11 +68,23 @@
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
         android:text="TextView"
-        android:textAlignment="textEnd"
+        android:textAlignment="textStart"
         android:textSize="12sp"
         app:layout_constraintBottom_toTopOf="@+id/benchmarksListView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/hangboardsListView"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/animationTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="-8dp"
+        android:layout_marginBottom="8dp"
+        android:text="TextView"
+        android:textSize="12sp"
+        app:layout_constraintBottom_toTopOf="@+id/randomizeGrips"
+        app:layout_constraintStart_toEndOf="@+id/benchmarkInfoTextView"
         app:layout_constraintTop_toTopOf="parent" />
 
 
