--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,7 +4,7 @@
     <color name="colorPrimaryDark">#303f9f</color>
     <color name="colorAccent">#661833</color>
     <color name="slate">#626d71</color>
-    <color name="ceramic">#cdcdc0</color>
+    <color name="ceramic">#CDCDC0</color>
     <color name="coffee">#977256</color>
     <color name="gray">#808080</color>
     <color name="darkerGray">#a9a9a9</color>
