--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="coffee">#977256</color>
     <color name="gray">#808080</color>
     <color name="darkerGray">#a9a9a9</color>
+    <color name="colorAccentFotn">#3E0E1F</color>
 </resources>
