Added filter icon to menubar.

--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -23,6 +23,12 @@
         android:title="@string/benchmark"
         app:showAsAction="ifRoom"
         />
+
+    <item android:id="@+id/action_filter"
+        android:icon="@drawable/filter_icon"
+        android:title="Grade filter"
+        app:showAsAction="ifRoom"
+        />
 <!--
     <item android:id="@+id/action_about"
         android:title="about"
