Added functionality to grip type Checkboxes in FilterActivity, those are saved to preferences and used when searching hold list.

--- a/app/src/main/res/layout/content_filter.xml
+++ b/app/src/main/res/layout/content_filter.xml
@@ -130,18 +130,21 @@
             android:orientation="horizontal">
 
             <CheckBox
+                android:id="@+id/fourfingerCheckBox"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Four finger">
 
             </CheckBox>
             <CheckBox
+                android:id="@+id/threefrontCheckBox"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Three front">
 
             </CheckBox>
             <CheckBox
+                android:id="@+id/threebackCheckBox"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Three back">
@@ -156,18 +159,23 @@
             android:orientation="horizontal">
 
             <CheckBox
+                android:id="@+id/twofrontCheckBox"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Two front">
 
             </CheckBox>
+
             <CheckBox
+                android:id="@+id/twomiddleCheckBox"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Two middle">
 
             </CheckBox>
+
             <CheckBox
+                android:id="@+id/twobackCheckBox"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Two back">
@@ -182,24 +190,31 @@
             android:orientation="horizontal">
 
             <CheckBox
+                android:id="@+id/indexfingerCheckBox"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Index finger">
 
             </CheckBox>
+
             <CheckBox
+                android:id="@+id/middlefingerCheckBox"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Middle finger">
 
             </CheckBox>
+
             <CheckBox
+                android:id="@+id/ringfingerCheckBox"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Ring finger">
 
             </CheckBox>
+
             <CheckBox
+                android:id="@+id/littlefingerCheckBox"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Little finger">
